[project]
name = "jagex-account-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "drissionpage>=4.1.1.2",
    "imap-tools>=1.11.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pyotp>=2.9.0",
    "rnet>=3.0.0rc20",
]
